# task_schedule

./: .gitignore  README.ja.md  README.md  config.yaml  jobs.yaml  pyproject.toml  sample.env  schedules.csv  start_gui_scheduler.bat  start_webgui_only.bat  tasktime.py
doc/: add_process.md  architecture_overview.md  basic_design.md  enhancement.md  enhancement_cwd_support.md  gui.md  gui_specification.md  process.md  refactoring_guide.md  register_custom_jobs.md  setup_guide.md  web_setup_manual.md  workflow.md
old/: start.bat  tasktime_asinc.py
review/: 20251004_workflow_based_setup.md
scripts/: start_debug.bat  start_dev.bat  start_dev_servers.bat  start_flask_server.bat
src/: main.py
src/core/: config.py  crud.py  database.py
src/modules/scheduler/: cli.py  job_executors.py  loader.py  models.py  python_job_wrapper.py  router.py  scheduler_instance.py  schemas.py  service.py
src/modules/scheduler/tasks/: backup.py  email_tasks.py  git_utils.py  monitoring.py  reporting.py  sample_tasks.py
src/scheduler/: cli.py  config.py  database.py  loader.py  main.py  models.py  scheduler.py
src/scheduler/tasks/: backup.py  monitoring.py  reporting.py  sample_tasks.py  webgui_launcher.py  webgui_tasks.py
src/templates/emails/: base_email.html  notification_email.html
src/util/: __init__.py  config_util.py  logger_util.py  time_util.py
src/webgui/: app.py
src/webgui/static/: dashboard.js  job_detail.js  jobs.js  logs.js  script.js  settings.js  style.css  timeline.js  workflow_detail.js  workflows.js
src/webgui/templates/: base.html  index.html  job_detail.html  jobs.html  logs.html  settings.html  workflow_detail.html  workflows.html
test/: bkprocess.py  call.py  config.ini  readConfig.py  test_api_handling.py  test_job_executors.py  test_schemas.py
test/add_process/: add.bat  add_process.py
tool/: add_jobs.py
