[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-task-scheduler"
version = "0.1.0"
description = "A resilient, persistent, and manageable task scheduling service."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "apscheduler",
    "sqlalchemy",
    "psycopg2-binary", # for PostgreSQL
    "pyyaml",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "tenacity",
    "watchdog",
    "Flask", # Added for WebGUI
    "requests", # Added for WebGUI to API communication
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "httpx",
]

[project.scripts]
# The entry point no longer needs 'src'
task-scheduler = "scheduler.cli:main"

[tool.setuptools]
# This tells setuptools that the packages are in the 'src' directory
package-dir = {"" = "src"}
# Find packages automatically within the 'src' directory
packages = {"find" = {where = ["src"]}}